--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,32 +2,39 @@
 <RelativeLayout
     android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
-    tools:context="com.hangox.polygonimageview.MainActivity"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context="com.hangox.polygonimageview.MainActivity">
 
-  <com.hangox.polygonimageviewlibrary.PolygonImageView
-      android:id="@+id/image"
-      android:src="@drawable/guo_ye"
-      app:piv_borderWidth="6dp"
-      app:piv_borderColor="@android:color/white"
-      app:piv_polygonImage="@drawable/polygon"
-      android:layout_width="100dp"
-      android:layout_height="match_parent"/>
+    <com.hangox.polygonimageviewlibrary.PolygonImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/guo_ye"
+        app:piv_borderColor="@android:color/white"
+        app:piv_borderWidth="6dp"
+        app:piv_polygonImage="@drawable/star"/>
 
 
-  <SeekBar
-      android:id="@+id/seek_bar"
-      android:max="80"
-      android:progress="20"
-      android:layout_width="match_parent"
-      android:layout_alignParentBottom="true"
-      android:layout_height="wrap_content"/>
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:max="80"
+        android:progress="80"/>
+
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/seek_bar"
+        android:text="刷新"/>
 </RelativeLayout>
