--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_main"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hangox.polygonimageview.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.hangox.polygonimageviewlibrary.PolygonImageView
-        android:id="@+id/image"
+    <RelativeLayout
+        android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/guo_ye"
-        app:piv_borderColor="@android:color/transparent"
-        app:piv_borderWidth="6dp"
-        app:piv_polygonImage="@drawable/star"/>
+        android:background="@color/colorPrimary"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.hangox.polygonimageview.MainActivity">
+
+        <com.hangox.polygonimageviewlibrary.PolygonImageView
+            android:id="@+id/image"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/guo_ye"
+            app:piv_borderColor="@android:color/white"
+            app:piv_borderWidth="18dp"
+            app:piv_polygonImage="@drawable/star"/>
 
 
-    <SeekBar
-        android:id="@+id/seek_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:max="80"
-        android:progress="80"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_height="50dp"/>
 
-    <Button
-        android:id="@+id/refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/seek_bar"
-        android:text="刷新"/>
-</RelativeLayout>
+        <Button
+            android:id="@+id/picker_color"
+            android:text="选择颜色"
+            android:layout_above="@id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:layout_above="@id/picker_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="80"
+            android:progress="80"/>
+
+
+    </RelativeLayout>
+</layout>
