--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,32 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.hangox.polygonimageview.MainActivity">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"/>
 
         <com.hangox.polygonimageviewlibrary.PolygonImageView
             android:id="@+id/image"
+            android:layout_below="@id/tool_bar"
             android:layout_centerHorizontal="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/guo_ye"
             app:piv_borderColor="@android:color/white"
             app:piv_borderWidth="18dp"
-            app:piv_polygonImage="@drawable/star"/>
+            app:piv_polygonImage="@drawable/ic_mask_hex"/>
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_height="50dp"/>
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/picker_color"
-            android:text="选择颜色"
+            android:text="选择边框颜色"
             android:layout_above="@id/recycle_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -44,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="80"
-            android:progress="80"/>
+            android:progress="10"/>
 
 
     </RelativeLayout>
