--- a/app/src/main/res/layout/view_holder_image_view.xml
+++ b/app/src/main/res/layout/view_holder_image_view.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="50dp"
-             android:layout_height="50dp"
+             android:layout_width="60dp"
+             android:layout_height="60dp"
              android:background="@drawable/bg_click"
              android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_view"
         android:scaleType="fitXY"
+        android:layout_centerInParent="true"
         tools:src="@drawable/star"
-        android:layout_gravity="center"
         android:layout_width="45dp"
         android:layout_height="45dp"/>
 </RelativeLayout>
